; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/dbus/extr_dbus_new_introspect.c_extract_interfaces.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/dbus/extr_dbus_new_introspect.c_extract_interfaces.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dl_list = type { i32 }
%struct.wpa_dbus_object_desc = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dl_list*, %struct.wpa_dbus_object_desc*)* @extract_interfaces to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @extract_interfaces(%struct.dl_list* %0, %struct.wpa_dbus_object_desc* %1) #0 {
  %3 = alloca %struct.dl_list*, align 8
  %4 = alloca %struct.wpa_dbus_object_desc*, align 8
  store %struct.dl_list* %0, %struct.dl_list** %3, align 8
  store %struct.wpa_dbus_object_desc* %1, %struct.wpa_dbus_object_desc** %4, align 8
  %5 = load %struct.dl_list*, %struct.dl_list** %3, align 8
  %6 = load %struct.wpa_dbus_object_desc*, %struct.wpa_dbus_object_desc** %4, align 8
  %7 = getelementptr inbounds %struct.wpa_dbus_object_desc, %struct.wpa_dbus_object_desc* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @extract_interfaces_methods(%struct.dl_list* %5, i32 %8)
  %10 = load %struct.dl_list*, %struct.dl_list** %3, align 8
  %11 = load %struct.wpa_dbus_object_desc*, %struct.wpa_dbus_object_desc** %4, align 8
  %12 = getelementptr inbounds %struct.wpa_dbus_object_desc, %struct.wpa_dbus_object_desc* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @extract_interfaces_signals(%struct.dl_list* %10, i32 %13)
  %15 = load %struct.dl_list*, %struct.dl_list** %3, align 8
  %16 = load %struct.wpa_dbus_object_desc*, %struct.wpa_dbus_object_desc** %4, align 8
  %17 = getelementptr inbounds %struct.wpa_dbus_object_desc, %struct.wpa_dbus_object_desc* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @extract_interfaces_properties(%struct.dl_list* %15, i32 %18)
  ret void
}

declare dso_local i32 @extract_interfaces_methods(%struct.dl_list*, i32) #1

declare dso_local i32 @extract_interfaces_signals(%struct.dl_list*, i32) #1

declare dso_local i32 @extract_interfaces_properties(%struct.dl_list*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
